# gif

AMDemo/app/: CMakeLists.txt  build.gradle
AMDemo/app/src/androidTest/java/com/example/huozhenpeng/amdemo/: ExampleInstrumentedTest.java
AMDemo/app/src/main/: AndroidManifest.xml
AMDemo/app/src/main/cpp/: native-lib.cpp
AMDemo/app/src/main/java/com/example/huozhenpeng/amdemo/: MainActivity.java  SecondActivity.java
AMDemo/app/src/main/res/layout/: activity_main.xml  activity_second.xml
AMDemo/app/src/main/res/values/: strings.xml
AMDemo/app/src/test/java/com/example/huozhenpeng/amdemo/: ExampleUnitTest.java
AMDemo/gradle/wrapper/: gradle-wrapper.properties
